# io_shared_library

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
bigquery/: reader.py  writer.py
src/io_shared_library/bigquery/: reader.py  writer.py
src/io_shared_library/config/: settings.py
