[project]
name = "io-shared-library"
version = "0.1.0"
description = ""
authors = [
    {name = "Vaibhav Vadgama",email = "vaibhav.vadgama.it@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
